fix deprecation warning